TP1/hello/hello-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-front
  template:
    metadata:
      labels:
        app: hello-front
    spec:
      containers:
      - name: hello-front
        image: registry.master3.takima.io/guide/kubernetes-resources/hello_world:latest
        ports:
        - containerPort: 3000
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /health
            port: 3000
      imagePullSecrets:
      - name: auth-master3-registry
