TP1/hello/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
  name: hello-ingress
spec:
  rules:
  - host: hello.catherine-vanden-hende.takima.cloud
    http:
      paths:
      - backend:
          service:
            name: hello-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hello.catherine-vanden-hende.takima.cloud
    secretName: app-wildcard-student
